--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -15,12 +15,13 @@
 }
 
 .image-file-preview {
-  width: 75%;
+  width: 300px;
   height: 25vh;
   background-position: center;
   background-repeat: no-repeat;
-  background-size: 75%;
+  background-size: contain;
   animation: fadeInDown 0.5s;
+  margin-right: 3vw;
 }
 
 .video-file-preview {
