--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -27,7 +27,7 @@
     (
       var(--app-bar-height) +
       var(--form-stepper-height) +
-      2px;
+      2px
     )
   );
 }
@@ -48,7 +48,7 @@
     (
       var(--app-bar-height) +
       var(--form-stepper-height) +
-      2px;
+      2px
     )
   );
   position: fixed;
