--- a/SELI-Platform/client/stylesheet/editor.css
+++ b/SELI-Platform/client/stylesheet/editor.css
@@ -22,13 +22,14 @@
   height: auto;
   color: var(--primary);
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin: 1.5vh 0;
 }
 
 .editor-block {
   width: 100%;
   height: 30vh;
+  animation: fadeInUp 0.35s;
 }
 
 .editor-button {
