--- a/SELI-Platform/client/stylesheet/library.css
+++ b/SELI-Platform/client/stylesheet/library.css
@@ -1,6 +1,9 @@
 .library-tool-container {
-  width: 100%;
-  height: auto;
+  width: 67.5vw;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .loading-library-container {
@@ -14,7 +17,7 @@
 .loading-library-text {
   width: 100%;
   text-align: center;
-  padding: 1.5vh 0;
+  padding: 1.5vh 0.25vw;
   text-transform: uppercase;
   font-size: 0.8em;
   letter-spacing: 0.5px;
@@ -30,21 +33,99 @@
 
 .result-library-text {
   margin-left: 0.5vw;
-  padding: 1.5vh 0;
+  padding: 1.5vh 1vw;
   text-transform: uppercase;
-  font-size: 0.8em;
+  font-size: 1.8em;
   letter-spacing: 0.5px;
+  color: #9e9e9e;
 }
 
 .image-card {
-  width: 23vw !important;
-  height: 30vh !important;
-  position: relative;
-  margin-left: 0.165vw;
-  margin-right: 0.165vw;
-  overflow: hidden;
-  padding-top: 2vh;
+  width: var(--card-width) !important;
+  height: var(--card-height) !important;
+  margin: 0.5vh 0.5vw;
+  opacity: 0.9;
+  transition: 0.5s;
 }
+
+.image-card:hover {
+  cursor: pointer;
+  opacity: 1;
+}
+
+.card-media-image {
+  width: var(--card-width) !important;
+  height: calc(var(--card-height) - var(--card-buttons)) !important;
+}
+
+.card-actions-bottom-container {
+  height: var(--card-buttons) !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  display: flex;
+  justify-content: flex-end;
+  background-color: #f5f5f5;
+  padding-right: 0.5vw !important;
+}
+
+.file-information-card {
+  width: 21vw;
+  word-break: break-all;
+}
+
+.image-avatar {
+  background-color: #ffc107 !important;
+}
+
+.file-information-card-header {
+  background-color: #eeeeee !important;
+  font-size: 0.9em !important;
+}
+
+.file-information-card-content {
+  font-size: 0.8em !important;
+  padding-left: 3vw !important;
+}
+
+.library-files-container {
+  display: flex;
+  flex-wrap: wrap;
+  max-width: 66vw;
+  min-width: 66vw;
+  min-height: 60vh;
+  max-height: 60vh;
+  overflow-y: scroll;
+  align-items: flex-start;
+  place-content: flex-start;
+}
+
+.library-results-header {
+  width: 100% !important;
+  display: flex !important;
+  justify-content: flex-end;
+  align-items: center;
+  background-color: #f5f5f5 !important;
+  margin-bottom: 2vh;
+}
+
+.library-search-input {
+  width: 100% !important;
+}
+
+.card-button {
+  margin: 0 0.1vw !important;
+}
+
+.card-icon {
+  font-size: 0.8em !important;
+}
+
+.form-big-button {
+  width: 100% !important;
+  letter-spacing: 1px;
+  font-size: 1.2em !important
+}
+/*
 
 .file-card {
   width: 23vw !important;
@@ -54,16 +135,6 @@
   margin-right: 0.165vw;
   overflow: hidden;
   padding-top: 2vh;
-}
-
-.card-media-image {
-  width: 23vw;
-  height: calc(30vh - 3em) !important;
-  background-size: 23vw;
-  background-position: center !important;
-  background-repeat: no-repeat !important;
-  position: relative;
-  overflow: hidden;
 }
 
 .card-media-audio {
@@ -130,17 +201,6 @@
   box-shadow: none;
 }
 
-.card-actions-bottom-container {
-  width: 23vw !important;
-  padding: 0 !important;
-  height: 3em;
-  display: flex;
-  justify-content: flex-end;
-  position: absolute;
-  bottom: 0;
-  background-color: var(--white) !important;
-}
-
 .files-result-container {
   width: auto;
   display: flex;
@@ -182,3 +242,4 @@
   font-size: 0.8em !important;
   padding-left: 3vw !important;
 }
+*/
