--- a/SELI-Platform/client/stylesheet/preview.css
+++ b/SELI-Platform/client/stylesheet/preview.css
@@ -1,10 +1,93 @@
 .file-preview-container {
   width: 100%;
-  height: 25vh;
+  height: 30vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2.5vh 0;
+  animation: fadeInDown 0.25s;
+}
+
+.file-preview-information {
+  height: 100%
+}
+
+#unit-preview-information {
+  width: calc(60% - var(--preview-action-container));
+  background-color: #f5f5f5;
+}
+
+.file-preview-actions {
+  height: 100%;
+  width: var(--preview-action-container);
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #fafafa;
+}
+
+.file-preview-name {
+  width: 100%;
+  text-align: center;
+  height: var(--preview-text);
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: calc((var(--preview-text) - 0.15em));
+  word-break: break-all;
+}
+
+.file-preview-by {
+  width: 100%;
+  text-align: center;
+  height: var(--preview-text);
+  letter-spacing: 0.5px;
+  color: var(--secondary);
+  font-size: calc((var(--preview-text) - 0.35em));
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  word-break: break-all;
+}
+
+.file-preview-icon-container {
+  width: 100%;
+  height: calc(100% - (var(--preview-text) * 2) - 1em);
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
+.file-preview-icon {
+  font-size: 8.5vw !important;
+  color: #333 !important;
+}
+
+.file-preview-icon-text {
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  width: 10vw;
+  font-size: 1.1em;
+  text-align: center;
+}
+
+#image-preview-information {
+  width: calc(80% - var(--preview-action-container));
+  background-color: #f5f5f5;
+}
+
+.file-image-preview {
+  width: 100%;
+  height: 100%;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+
+/**/
 
 .file-preview-block {
   width: 100%;
@@ -86,10 +169,7 @@
   background-color: #fafafa;
 }
 
-.file-preview-actions {
-  width: 25%;
-  height: 100%;
-}
+
 
 .file-preview-row {
   width: 100%;
