--- a/SELI-Platform/client/stylesheet/image-form.css
+++ b/SELI-Platform/client/stylesheet/image-form.css
@@ -6,3 +6,14 @@
 .MuiDialog-paperScrollPaper {
   max-height: 95vh !important;
 }
+
+.form-editor-label {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 8px;
+  padding-bottom: 4px;
+  letter-spacing: 1px;
+  font-size: 0.9em;
+}
