--- a/SELI-Platform/client/stylesheet/course-information.css
+++ b/SELI-Platform/client/stylesheet/course-information.css
@@ -60,8 +60,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #bdbdbd;
+  color: #9e9e9e;
   height: 46px;
+  animation: fadeIn 1s;
+}
+
+.form-message-small{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #9e9e9e;
+  height: 25px;
+  font-size: 0.85em;
   animation: fadeIn 1s;
 }
 
@@ -193,5 +204,19 @@
 
 .form-file-selected-button {
   background-color: var(--white) !important;
-  color: #616161;
+  color: #616161 !important;
+}
+
+.form-input-button {
+  width: 100% !important;
+  letter-spacing: 1px !important;
+  font-size: 0.95em !important;
+  padding-top: 12px !important;
+  padding-bottom: 12px !important;
+  transition: 0.5s;
+  margin-top: 8px !important;
+}
+
+.form-input-button:hover {
+  color: var(--primary);
 }
