--- a/SELI-Platform/client/stylesheet/course-menu.css
+++ b/SELI-Platform/client/stylesheet/course-menu.css
@@ -8,6 +8,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1200;
+  background-color: rgba(255, 255, 255, 0.45);
+  border-radius: 100%;
 }
 
 .course-menu-button {
