--- a/SELI-Platform/client/stylesheet/courses-dashboard.css
+++ b/SELI-Platform/client/stylesheet/courses-dashboard.css
@@ -23,11 +23,22 @@
   align-items: center;
   width: 100%;
   padding-top: 20px;
+  background-color: #eeeeee;
+  padding-bottom: 15vh !important;
 }
 
 .course-card {
   max-width: 345px !important;
-  margin: 2vh 0.25vw !important;
+  margin: 2vh 0.5vw !important;
+  transition: 0.15s !important;
+}
+
+.course-card:hover {
+  transform: scale(1.025) !important;
+  cursor: pointer !important;
+  -webkit-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75) !important;
+  -moz-box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75) !important;
+  box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.75) !important;
 }
 
 .course-card-media {
@@ -62,4 +73,37 @@
   overflow: hidden !important;
   text-overflow: ellipsis !important;
   text-align: justify !important;
+}
+
+.course-card-button {
+  margin: 0 0.25vw !important;
+}
+
+.courses-dashboard-title-container {
+  background-image: url(courses.jpg);
+  background-position: right;
+  background-repeat: no-repeat;
+  background-size: 35%;
+}
+
+.courses-dashboard-title-text {
+  font-size: 1.85em;
+  letter-spacing: 1.75px;
+  text-transform: uppercase;
+  color: #333333;
+  padding-top: 7.5vh;
+  padding-bottom: 7.5vh;
+  padding-left: 5vw;
+}
+
+.button-link {
+  text-decoration: none !important;
+}
+
+.course-card-actions {
+  justify-content: flex-end !important;
+}
+
+.course-card-extra-information {
+  font-size: 0.85em !important;
 }
