--- a/SELI-Platform/client/stylesheet/data-display.css
+++ b/SELI-Platform/client/stylesheet/data-display.css
@@ -13,6 +13,7 @@
   position: relative;
   top: calc(3vh + 1.4em);
   overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .management-title {
@@ -29,6 +30,7 @@
   font-size: 1.4em;
   text-transform: uppercase;
   animation: fadeInDown 0.5s;
+  z-index: 400;
 }
 
 .management-title-icon {
